--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.16.1",
+    "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "easyimage": "^2.1.0",
-    "express": "^4.14.1",
+    "express": "^4.17.1",
     "file-type": "^7.4.0",
     "fs": "0.0.1-security",
     "json-patch": "^0.7.0",
@@ -26,7 +27,7 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.0.0",
     "mocha": "^4.0.1"
   }
 }
